fin de ejercicio

--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,25 @@
                 <h3>This is section 3</h3>
             </section>
         </main>
+        <section id="section-four">
+            <article>
+                <h3 class="h3-section-four">Life of the dung beetle</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dignissimos voluptas iusto nesciunt, accusantium nobis minus veritatis doloremque. Possimus fugiat eius facilis optio magni minima libero, nemo perferendis ipsum molestiae.</p>
+            </article>
+            <article>
+                <h3 class="h3-section-four">Life of the butterfly</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas molestiae nam rerum harum doloribus distinctio minima ad autem officia quibusdam repellendus nesciunt aliquid ducimus soluta, vero vitae fugiat dolore exercitationem!</p>        
+            </article>
+            <article>
+                <h3 class="h3-section-four">Life of the bee</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas molestiae nam rerum harum doloribus distinctio minima ad autem officia quibusdam repellendus nesciunt aliquid ducimus soluta, vero vitae fugiat dolore exercitationem!</p>
+             </article>
+             <article>
+                <h3 class="h3-section-four">Life of the lion</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas molestiae nam rerum harum doloribus distinctio minima ad autem officia quibusdam repellendus nesciunt aliquid ducimus soluta, vero vitae fugiat dolore exercitationem!</p>
+
+             </article>
+
+        </section>
     </body>
 </html>
